--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="row g-0">
           <div
             class="col-lg-6 order-lg-2 text-white showcase-img"
-            style="background-image: url('assets/img/bg-showcase-1.png')"
+            style="background-image: url('assets/img/bg-showcase-island1.jpg')"
           ></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Welcome!</h2>
