clear uncessary comments and corrected syntax and failed w3 validation items

--- a/index.html
+++ b/index.html
@@ -27,15 +27,6 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- Navigation-->
-    <!-- <nav class="navbar navbar-light bg-light static-top">
-            <!-- <div class="container">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
-                <a class="btn btn-primary" href="#signup">Sign Up</a>
-                <a class="nav-item nav-tabs" href="/thingstodo.html">Things to do</a>
-                
-            </div> -->
-
     <nav
       class="navbar navbar-expand-lg navbar-light bg-light text-uppercase fixed-top fs-4"
     >
@@ -101,11 +92,7 @@
               <h1 class="fw-bold">Island of Taniti</h1>
 
               <div class="col-auto">
-                <button
-                  class="btn btn-primary btn-lg"
-                  id="submitButton"
-                  type="submit"
-                >
+                <button class="btn btn-primary btn-lg" type="submit">
                   Book a trip now!
                 </button>
               </div>
@@ -136,11 +123,7 @@
               island's beauty captivate you.
             </p>
             <div class="col-auto">
-              <button
-                class="btn btn-primary btn-sm fs-5"
-                id="submitButton"
-                type="submit"
-              >
+              <button class="btn btn-primary btn-sm fs-5" type="submit">
                 <a href="about.html" class="text-light text-decoration-none"
                   >Lean more</a
                 >
@@ -171,11 +154,7 @@
               you.
             </p>
             <div class="col-auto">
-              <button
-                class="btn btn-primary btn-sm fs-5"
-                id="submitButton"
-                type="submit"
-              >
+              <button class="btn btn-primary btn-sm fs-5" type="submit">
                 <a
                   href="entertainment.html"
                   class="text-light text-decoration-none"
@@ -203,11 +182,7 @@
               memorable culinary adventure.
             </p>
             <div class="col-auto">
-              <button
-                class="btn btn-primary btn-sm fs-5"
-                id="submitButton"
-                type="submit"
-              >
+              <button class="btn btn-primary btn-sm fs-5" type="submit">
                 <a href="dining.html" class="text-light text-decoration-none"
                   >Lean more</a
                 >
@@ -234,11 +209,7 @@
               home in Taniti.
             </p>
             <div class="col-auto">
-              <button
-                class="btn btn-primary btn-sm fs-5"
-                id="submitButton"
-                type="submit"
-              >
+              <button class="btn btn-primary btn-sm fs-5" type="submit">
                 <a href="lodging.html" class="text-light text-decoration-none"
                   >Lean more</a
                 >
@@ -266,11 +237,7 @@
               travels around Taniti smooth and enjoyable.
             </p>
             <div class="col-auto">
-              <button
-                class="btn btn-primary btn-sm fs-5"
-                id="submitButton"
-                type="submit"
-              >
+              <button class="btn btn-primary btn-sm fs-5" type="submit">
                 <a
                   href="transportation.html"
                   class="text-light text-decoration-none"
@@ -287,35 +254,6 @@
         <br />
       </div>
     </section>
-    <!-- Testimonials-->
-    <!-- <section class="testimonials text-center bg-light">
-            <div class="container">
-                <h2 class="mb-5">What people are saying...</h2>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-1.jpg" alt="..." />
-                            <h5>Margaret E.</h5>
-                            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
-                            <h5>Fred S.</h5>
-                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-3.jpg" alt="..." />
-                            <h5>Sarah W.</h5>
-                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
 
     <section class="call-to-action text-white text-center" id="signup">
       <div class="container position-relative">
@@ -323,11 +261,7 @@
           <div class="col-xl-6">
             <h2 class="mb-4">Ready to have your dream vacation?</h2>
             <div class="col-auto">
-              <button
-                class="btn btn-primary btn-lg"
-                id="submitButton"
-                type="submit"
-              >
+              <button class="btn btn-primary btn-lg" type="submit">
                 Book now!
               </button>
             </div>
