--- a/entertainment.html
+++ b/entertainment.html
@@ -236,11 +236,7 @@
           <div class="col-xl-6">
             <h2 class="mb-4">Ready to have your dream vacation?</h2>
             <div class="col-auto">
-              <button
-                class="btn btn-primary btn-lg"
-                id="submitButton"
-                type="submit"
-              >
+              <button class="btn btn-primary btn-lg" type="submit">
                 Book now!
               </button>
             </div>
