--- a/transportation.html
+++ b/transportation.html
@@ -27,15 +27,6 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- Navigation-->
-    <!-- <nav class="navbar navbar-light bg-light static-top">
-            <!-- <div class="container">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
-                <a class="btn btn-primary" href="#signup">Sign Up</a>
-                <a class="nav-item nav-tabs" href="/thingstodo.html">Things to do</a>
-                
-            </div> -->
-
     <nav
       class="navbar navbar-expand-lg navbar-light bg-light text-uppercase fixed-top fs-4"
     >
@@ -170,11 +161,7 @@
           <div class="col-xl-6">
             <h2 class="mb-4">Ready to have your dream vacation?</h2>
             <div class="col-auto">
-              <button
-                class="btn btn-primary btn-lg"
-                id="submitButton"
-                type="submit"
-              >
+              <button class="btn btn-primary btn-lg" type="submit">
                 Book now!
               </button>
             </div>
